Add CSS to left/center/right align images

--- a/catznip/docs/stylesheets/extra.css
+++ b/catznip/docs/stylesheets/extra.css
@@ -18,3 +18,19 @@
 	position: relative;
 	width: 100%;
 }
+
+img[alt$=">"] {
+	float: right;
+  }
+  
+  img[alt$="<"] {
+	float: left;
+  }
+  
+  img[alt$="><"] {
+	display: block;
+	max-width: 100%;
+	height: auto;
+	margin: auto;
+	float: none!important;
+  }
